--- a/src/components/TeamMember.css
+++ b/src/components/TeamMember.css
@@ -15,8 +15,8 @@ body {
   background-image: url('./Images/1.jpg');
   height: 100vh;
   background-size: cover;
+  
   text-align: center;
- 
   background-position: center;
   background-attachment: fixed;
 }
@@ -24,13 +24,12 @@ h2, h3, h4, h5 {
   margin: 0 0 3px;
 }
 
-
-
-
-.UserCard {  
+.UserCard { 
+  flex: 1; 
   position: relative;
   padding-bottom: 1em;
   width: 290px;
+  display: table;
   color:black;
   /* font-family: 'Poppins', sans-serif;*/
   font-family: 'Oxanium';
@@ -42,9 +41,12 @@ h2, h3, h4, h5 {
   background: -webkit-linear-gradient(to left, #0c2b5e, #173c77); 
   background: linear-gradient(to left,#cdcdcd,white)
 }
+.OuterWrap {
+  display: flex;
+  justify-content: center;
+}
 
 .UserCard img {
-
   width: 200px;
   height: 200px;
   margin: 20px 0 0 0;
